fix overflow

--- a/ui/src/windows/editor/editor-text-file-pane/editor-text-file-pane.component.css
+++ b/ui/src/windows/editor/editor-text-file-pane/editor-text-file-pane.component.css
@@ -11,5 +11,5 @@
   flex: 1;
   min-height: 0;
   min-width: 0;
-  overflow-y: auto;
+  overflow: hidden;
 }
